# open-work-protocol

./: DEMO_SCRIPT.md  DEVLOG.md  PRD.md  README.md
.agents/execution-reports/: phase-1-fastify-server.md
.agents/plans/: core-fastify-server-implementation.md  protocol-first-openapi-specification.md
.kiro/agents/: devlog-maintainer.json
.kiro/prompts/: update-devlog.md
.kiro/settings/: hooks.json
.kiro/steering/: IMPLEMENTATION_RULES.md  hackathon-scoring.md  kiro-optimization.md  product.md  structure.md  tech.md
apps/obsidian-plugin/: esbuild.config.mjs  manifest.json  package.json
apps/obsidian-plugin/src/: main.ts  settings.ts
apps/obsidian-plugin/src/api/: client.ts
apps/obsidian-plugin/src/views/: AdminView.ts  TaskView.ts  WorkerView.ts
apps/server/: Dockerfile  jest.config.js  package-lock.json  package.json  pool.db  tsconfig.json
apps/server/src/: main.ts
apps/server/src/__tests__/: error-handling.integration.test.ts  (+1 more)
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx  index.css
deep-research/: TODO.md  pyproject.toml
deep-research/AI-WORKER-POOL/: .env.example  .gitignore  README.md
deep-research/AI-WORKER-POOL/docs/: hackathon-review.md  owp-spec.md  tech-stack-review.md
deep-research/AI-WORKER-POOL/src/pool/: auth.py  cli.py  config.py  db.py  envfile.py  models.py  scheduler.py
deep-research/demo/: tasks.yaml
deep-research/docs/: prd.md  stack-recommendation.md
deep-research/scripts/: demo.sh
deep-research/src/pool/: server.py
scripts/: update-devlog.sh
(+12 files in other folders)
