[project]
name = "owp-pool"
version = "0.1.0"
description = "Open Work Protocol (OWP) reference implementation: capacity-aware scheduler + worker CLI for distributed AI coding."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "typer>=0.12",
  "rich>=13.7",
  "httpx>=0.27",
  "pyyaml>=6.0",
  "jinja2>=3.1",
]

[project.scripts]
poold = "pool.server:main"
pool = "pool.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pool"]
